# qt5gtk2

./: CMakeLists.txt  ChangeLog  README.md
src/qt5gtk2-qtplugin/: CMakeLists.txt  main.cpp  qt5gtk2.json  qt5gtk2dialoghelpers.cpp  qt5gtk2dialoghelpers.h  qt5gtk2theme.cpp  qt5gtk2theme.h
src/qt5gtk2-style/: CMakeLists.txt  plugin.cpp  qgtk2painter.cpp  qgtk2painter_p.h  qgtkglobal_p.h  qgtkpainter.cpp  qgtkpainter_p.h  qgtkstyle.cpp  qgtkstyle_p.cpp  qgtkstyle_p.h  qgtkstyle_p_p.h  qstylehelper.cpp  qstylehelper_p.h  qt5gtk2.json
tests/: CMakeLists.txt
tests/dirview/: CMakeLists.txt  test.sh.in
tests/standarddialogs/: CMakeLists.txt  test.sh.in
